Splash and game screen added on canvas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Thor's Conquest</title>
 </head>
 <body>
+    <button id="start">Start Game</button>
+    <button id="mainmenu">Main Menu</button>
     <canvas id="myCanvas" width="1000" height="800"></canvas>
     <script src="index.js"></script>
 </body>
