--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Thor's Conquest</title>
 </head>
 <body>
+    <div id="splash">
+        <h1>Thor's Conquest<h1>
+        <h2>Instructions:</h2>
+        <div id="instr-desc">
+            <p>Move the arrows to move Thor up the hill to retrieve Mjolnir<br>
+            but beware not to get hit by Loki's daggers as you climb</p>
+        </div>
+        <h3 id="hs">Highscore:</h3>
+    </div>
+    <div id="gameover">
+        <h1>Game Over</h1>
+        <h2>Highscore:</h2>
+        <button id="restart">Restart</button>
+    </div>
     <button id="start">Start Game</button>
     <button id="mainmenu">Main Menu</button>
     <canvas id="myCanvas" width="1000" height="800"></canvas>
