--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Thor's Conquest</title>
 </head>
 <body>
@@ -21,7 +25,7 @@
         <button id="restart">Restart</button>
     </div>
     <button id="start">Start Game</button>
-    <button id="mainmenu">Main Menu</button>
+    
     <canvas id="myCanvas" width="1000" height="800"></canvas>
     <script src="index.js"></script>
 </body>
