--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div id="gameover">
         <h1>Game Over</h1>
-        <h2>Highscore:</h2>
+        <h2 id="score">Highscore:</h2>
         <button id="restart">Restart</button>
     </div>
     <button id="start">Start Game</button>
