height change on canvas for better gameplay

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <p>Move the arrows to move Thor up the hill to retrieve Mjolnir<br>
             but beware not to get hit by Loki's daggers as you climb</p>
         </div>
-        <h3 id="hs">Highscore:</h3>
+        <h3 class="hs">Highscore: 0</h3>
     </div>
     <div id="gameover">
-        <h1>Game Over</h1>
-        <h2 id="score">Highscore:</h2>
+        <h1 class="congover">Game Over</h1>
+        <h2 class="hs">Highscore: 0</h2>
         <button id="restart">Restart</button>
     </div>
     <button id="start">Start Game</button>
     
-    <canvas id="myCanvas" width="1000" height="800"></canvas>
+    <canvas id="myCanvas" width="1000" height="1000"></canvas>
     <script src="index.js"></script>
 </body>
 </html>
